# layered-django-example

./: .env.example  Dockerfile  README.md  docker-compose.yaml
app/: README.md  pyproject.toml
app/app/: celery_app.py  settings.py  urls.py
app/todo/data/models/: todo.py
app/todo/domain/: todo.py
app/todo/interfaces/: tasks.py
app/todo/interfaces/views/: todo.py
app/todo/migrations/: 0001_initial.py
sample/: README.md  pyproject.toml  start.sh
sample/core/: csv.py  use_case.py
sample/sample/: celery_app.py  settings.py  urls.py
sample/todo/: urls.py
sample/todo/application/use_cases/: upload_todo_list.py
sample/todo/data/elasticsearch/documents/: todo.py
sample/todo/data/elasticsearch/search/: todo.py
sample/todo/data/models/: todo.py
sample/todo/domain/: todo.py
sample/todo/interfaces/: tasks.py
sample/todo/interfaces/schema/: todo.py
sample/todo/interfaces/serializers/: __init__.py  todo.py
sample/todo/interfaces/views/: tasks.py  todo.py
